<resources>
    <string name="app_name">Viaje</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="family_name_hint">Family Name</string>
    <string name="given_name_hint">Given Name</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="address_hint">Address</string>
    <string name="license_number_hint">License Number</string>
    <string name="model_year_hint">Vehicle Model Year</string>
    <string name="plate_number_hint">Plate Number</string>
    <string name="vehicle_type_hint">Vehicle Type</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter the necessary fields!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Not a member yet? \n \t Register here</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Log out</string>
    <string name="signup_title_header">Personal Information:</string>
    <string name="go_to_your_profile_hint">Go to your profile</string>
    <string name="see_map_hint">See Map</string>
    <string name="assistance_hint">Ask for assistance</string>
    <string name="view_announcements">View Announcements</string>
    <string name="emergency_hint">Emergency</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_title">Are you okay?</string>
    <string name="dialog_message">You have been idle for five(5) minutes. We would like to check if you are okay?</string>
    <string name="dialog_negative_text">Need Help!</string>
    <string name="dialog_positive_text">I am totally fine.</string>
    <string name="choose_action">Choose Action</string>

    <string name="service_type_tire_service">Tire Service</string>
    <string name="service_type_towing">Towing</string>
    <string name="service_type_fuel_delivery">Fuel Delivery Service</string>
    <string name="service_type_battery_boost">Battery Boost</string>

    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="add_pin">Pin Location</string>
    <string name="submit">Submit</string>
    <string name="post_comment">Post Comment...</string>
    <string name="posted_by">Orofeo Bito</string>
    <string name="post_content">Haha</string>


    <string name="ad_title">AD Title: </string>
    <string name="shop">Shop: </string>
    <string name="event_name">Event Name: </string>
    <string name="announcements">Announcements</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="save_profile_button">Save</string>


</resources>
