<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f0f0f0"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/appId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/font_size_default_xl"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_horizontal_margin"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailFieldTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appId">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" >

            <!--<requestfocus></requestfocus>-->

        </EditText>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordFieldTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailFieldTextLayout">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailFieldTextLayout"
            android:layout_below="@+id/emailFieldTextLayout"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordFieldTextLayout"
        android:text="@string/login_button_label"
        android:clickable="true"
        android:background="@drawable/ripple_effect"/>


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/sign_up_text" />

</RelativeLayout>
