<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_title_header"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/emailLayout"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_md">

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:paddingTop="@dimen/activity_vertical_margin_lg"
                    android:hint="@string/email_hint">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailLayout">

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:layout_below="@+id/emailLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout">

                <EditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordLayout"
                    android:inputType="text"
                    android:hint="@string/username_hint"
                    android:ems="10"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/familyNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameLayout">

                <EditText
                    android:id="@+id/familyNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usernameLayout"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/family_name_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/givenNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/familyNameLayout">

                <EditText
                    android:id="@+id/givenNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_below="@+id/familyNameLayout"
                    android:hint="@string/given_name_hint"
                    android:ems="10"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contactNoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/givenNameLayout">

                <EditText
                    android:id="@+id/contactNoField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_below="@+id/givenNameLayout"
                    android:hint="@string/contact_number_hint"
                    android:ems="10"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactNoLayout">

                <EditText
                    android:id="@+id/addressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contactNoLayout"
                    android:inputType="textPostalAddress"
                    android:hint="@string/address_hint"
                    android:ems="10"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/licenseNoFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressFieldLayout">

                <EditText
                    android:id="@+id/licenseNoField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/license_number_hint"
                    android:ems="10"
                    android:layout_below="@+id/addressFieldLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/modelYearFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/licenseNoFieldLayout">

                <EditText
                    android:id="@+id/modelYearField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/model_year_hint"
                    android:ems="10"
                    android:layout_below="@+id/licenseNoFieldLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/plateNoFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/modelYearFieldLayout">

                <EditText
                    android:id="@+id/plateNoField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/modelYearFieldLayout"
                    android:hint="@string/plate_number_hint"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:inputType="text"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/vehicleTypeFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plateNoFieldLayout">

                <EditText
                    android:id="@+id/vehicleTypeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/plateNoFieldLayout"
                    android:hint="@string/vehicle_type_hint"
                    android:ems="10"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button_label"
                android:background="@drawable/ripple_effect"
                android:layout_below="@+id/plateNoFieldLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="83dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
