<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_color"
    tools:context="com.app.viaje.viaje.ProfileActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:hint="@string/action_logout"
        android:textColorHint="#ffffff"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/full_name_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/profilePic_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_md"/>

    <EditText
        android:id="@+id/update_plate_number_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin_md"
        android:hint="GGWP420"/>

    <EditText
        android:id="@+id/update_email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plate_number_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin_md"
        android:hint="jimmy@gmail.com"/>

    <EditText
        android:id="@+id/update_contact_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin_md"
        android:hint="0999999999"/>

    <EditText
        android:id="@+id/update_address_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_number_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin_md"
        android:hint="Cebu, City"/>

    <TextView
        android:id="@+id/plate_number_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/full_name_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_md"/>

    <TextView
        android:id="@+id/email_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/plate_number_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_md"/>

    <TextView
        android:id="@+id/contact_number_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/email_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_md"/>

    <TextView
        android:id="@+id/address_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/contact_number_text_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_md"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/full_name_text_id"
        android:layout_toLeftOf="@+id/plate_number_text_id"
        android:layout_toStartOf="@+id/plate_number_text_id"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/plate_number_img_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_plate"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp" />

        <ImageView
            android:id="@+id/email_img_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_mail" />


        <ImageView
            android:id="@+id/contact_img_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_contact" />

        <ImageView
            android:id="@+id/address_img_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_address"/>
    </LinearLayout>

    <EditText
        android:id="@+id/update_full_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Jimmy, Razaga"
        android:layout_alignTop="@+id/full_name_text_id"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/update_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_check"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic_id"
        android:layout_width="@dimen/activity_horizontal_margin_xlg"
        android:layout_height="@dimen/activity_vertical_margin_xlg"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:src="@drawable/default_profile"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/logout_button"
        android:layout_centerHorizontal="true" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_profile_button"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button"
        android:textColor="#ffffff"
        android:text="@string/update_profile_button"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_profile_button"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button"
        android:textColor="#ffffff"
        android:text="@string/save_profile_button"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin_lg"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_centerVertical="true"/>


</RelativeLayout>
